<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My First App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Edit Message</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_search">Search</string>

    <string-array name="Plates">
        <item>45</item>
        <item>35</item>
        <item>25</item>
        <item>10</item>
        <item>5</item>
        <item>2.5</item>
    </string-array>

    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="working_weight">Working Weight</string>
    <string name="squat">Squat</string>
    <string name="deadlift">Deadlift</string>
    <string name="title_activity_squat">SquatActivity</string>
    <string name="title_activity_main_activityaa">MainActivityaa</string>
    <string name="title_activity_deadlift">DeadliftActivity</string>
    <string name="title_activity_bench">BenchActivity</string>
    <string name="bench">Bench</string>
    <string name="weight0">0</string>
    <string name="rep0">5</string>
    <string name="set0">2</string>
    <string name="weight1">40</string>
    <string name="weight2">60</string>
    <string name="set2">1</string>
    <string name="weight3">80</string>
    <string name="weight4">100</string>

</resources>
