<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
     	android:gravity="center_horizontal"
        android:hint="@string/edit_message" />
    
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
     	android:gravity="center_horizontal"
        android:text="@string/button_send"
        android:onClick="sendMessage"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
     	android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/squat"
        android:onClick="squat" />

    <Button
        android:id="@+id/button3"
      	android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deadlift" 
        android:onClick="deadlift" />
    
    <Button
        android:id="@+id/button4"
      	android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bench" 
        android:onClick="bench" />
</LinearLayout>
